The tests are executed even if the installed Redis server is not running
Change-Id: Ifa374dc74053d166718733f7f43f2cf09c107598

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Redis::CappedCollection module
 
+0.05  Fri Mar  08 2013
+    CHANGES:
+    - The tests are executed even if the installed Redis server is not running
+
 0.04  Fri Mar  08 2013
     CHANGES:
     - Added method 'ping'
