--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Redis::CappedCollection module
 
+0.06  Wed Mar  14 2013
+    CHANGES:
+    - 'size' = 'maxmemory' if 'size' is not specified when creating an object
+
 0.05  Fri Mar  08 2013
     CHANGES:
     - The tests are executed even if the installed Redis server is not running
