--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Redis::CappedCollection package version 0.07
+Redis::CappedCollection package version 0.08
 ============================================
 
 Redis::CappedCollection module provides fixed sized collections that have
@@ -29,6 +29,7 @@ Redis::CappedCollection :
    Mouse
    Params::Util
    Redis
+   Try::Tiny
 
 The Redis::CappedCollection module has the following optional dependencies:
 
@@ -65,7 +66,6 @@ The basic operation of the Redis::CappedCollection package module:
 COPYRIGHT AND LICENCE
 
 Copyright (C) 2012-2013 by TrackingSoft LLC.
-All rights reserved.
 
 This package is free software; you can redistribute it and/or modify it under
 the same terms as Perl itself. See perlartistic at
