Tests fine-tuned to the correct execution of 32-bit systems.
Change-Id: I116ff9a9c08fae3baa1e99a03bbefd7f949d97ec

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Redis::CappedCollection module
 
+0.09  Fri Sep  27 2013
+    FIXES:
+    - Tests fine-tuned to the correct execution of 32-bit systems.
+
 0.08  Wed Sep  18 2013
     CHANGES:
     - Use Try::Tiny for proper preservation of $@ .
