Fix runtime loading of Test::*
- Fix runtime loading of Test::* .
- Reformatting module.

Change-Id: I1bf0dae74199e1977f4b553e097da67a0cb3f937

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Redis::CappedCollection module
 
+0.10  Fri Oct  25 2013
+    FIXES:
+    - Fix runtime loading of Test::*
+
 0.09  Fri Sep  27 2013
     FIXES:
     - Tests fine-tuned to the correct execution of 32-bit systems.
