Adjust Redis server connection parameters to match latest Redis.pm module
Change-Id: I1ff46a5f41520a6e3c110a040bb491dcdb613396

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Redis::CappedCollection module
 
+0.11  Fri Nov  15 2013
+    CHANGES:
+    - Adjust Redis server connection parameters.
+      (Starting with version 1.963, Redis module doesn't support encoding)
+
 0.10  Fri Oct  25 2013
     FIXES:
     - Fix runtime loading of Test::*
