Updated version number
Change-Id: I5edade19c2417147f642a91d6e41d675a93351bc

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Redis::CappedCollection module
 
+0.12  Fri Mar  14 2014
+    CHANGES:
+    - Change the port used for testing.
+
 0.11  Fri Nov  15 2013
     CHANGES:
     - Adjust Redis server connection parameters.
