--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Redis::CappedCollection module
 
+0.13  Mon Mar  17 2014
+    CHANGES:
+    - Small test improvement.
+
 0.12  Fri Mar  14 2014
     CHANGES:
     - Change the port used for testing.
