--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Redis::CappedCollection module
 
+0.16  Tue May  27 2014
+    CHANGES:
+    - Added argument 'check_maxmemory' to the Redis::CappedCollection->new .
+
 0.13 - 0.15  Wed Apr  02 2014
     CHANGES:
     - Small test improvement.
