Clarified operation with ${^GLOBAL_PHASE}
Change-Id: I92b6b582408bb07414fad9032b7e16ebbc2d62ef

--- a/Changes
+++ b/Changes
@@ -2,8 +2,8 @@ Revision history for Redis::CappedCollection module
 
 0.17  ??? ???  ?? 20??
     CHANGES:
-    - The 'quit' method not ask the Redis server to close the connection
-      on global destruction phase.
+    - The 'quit' method does not close connection to Redis during
+      global destruction phase (Perl version 5.14 and above).
 
 0.16  Tue May  27 2014
     CHANGES:
