Creating and using already created collections
refs #265

Change-Id: I4097de0ac7c96a9af45198d172bda0c8aacb48e8

--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Redis::CappedCollection module
 
-0.17  ??? Apr  ?? 2015
+0.17  Thu Apr  23 2015
     CHANGES:
     - Added 'create', 'open' constructors.
     - Added 'collection_exists', 'resize' methods.
