--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Redis::CappedCollection module
 
+1.01  ??? ???  ?? 2015
+    FIXES:
+    - Small documentation and MANIFEST correction.
+    - Small correction in destruction.
+
 1.00  Mon Jun  15 2015
 
     !!! This is a major upgrade that changes API. It's strongly advised to study
