--- a/Changes
+++ b/Changes
@@ -1,9 +1,9 @@
 Revision history for Redis::CappedCollection module
 
-1.02  ??? ???  ?? 2015
+1.02  Fri Jul  17 2015
     CHANGES:
-    - Redis::CappedCollection->quit method does not close the connection
-      to the redis server if it was provided by the user.
+    - Redis::CappedCollection does not close connection to redis server (including '->quit' method)
+      if it was provided by user.
 
 1.01  Tue Jul  07 2015
     CHANGES:
