--- a/Changes
+++ b/Changes
@@ -1,9 +1,10 @@
 Revision history for Redis::CappedCollection module
 
-1.02  Fri Jul  17 2015
+1.02  ??? ???  ?? 2015
     CHANGES:
     - Redis::CappedCollection does not close connection to redis server (including '->quit' method)
       if it was provided by user.
+    - More convenient error codes naming.
 
 1.01  Tue Jul  07 2015
     CHANGES:
