Changes date corrected
Change-Id: I3973e08a1e93d4a1f69674c0986f4b50e6a2a06c

--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Redis::CappedCollection module
 
-1.02  ??? ???  ?? 2015
+1.02  Thu Sep  03 2015
     CHANGES:
     - Redis::CappedCollection does not close connection to redis server (including '->quit' method)
       if it was provided by user.
