introduce method for verifying compliance of redis configuration with Redis::CappedCollection
fixes #447

Change-Id: Ie883fd6d05fdcb5a3377d5c0da6da599e309476f

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for Redis::CappedCollection module
 
     CHANGES:
+    - Works with a Redis server 'maxmemory-policy' setting 'noeviction' only.
+    - Added 'redis_config_ok' method.
     - $E_REDIS_DID_NOT_RETURN_DATA, $E_UNKNOWN_ERROR errors added.
     - Updated version of the data structure.
     FIXES:
