Allowability 'reconnect_on_error' attribute for constructor fixed
Change-Id: Ibe5d252213f51c2ff7a5c16f3e1cb671aabf3286

--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 Revision history for Redis::CappedCollection module
 
     CHANGES:
-    - Ability to force re-connection with Redis on error.
+    - Ability to force re-connection with Redis on error ('reconnect_on_error' attribute).
     - Revised error codes.
     - Better handling of errors when running out of memory.
     - Arguments control improved.
