port format_message() from TS project
fixes #500

Change-Id: I1b60298b7b8aad9a660d2a974d9fdb80257b93b4

--- a/Changes
+++ b/Changes
@@ -7,6 +7,7 @@ Revision history for Redis::CappedCollection module
     - Revised error codes.
     - Better handling of errors when running out of memory.
     - Arguments control improved.
+    - Added the service module Redis::CappedCollection::Util.
     FIXES:
     - Argument 'redis' may have Redis::CappedCollection type in function
       collection_info, collection_exists, drop_collection, redis_config_ok,
