Makefile.PL and tests corrected.
Change-Id: Ie2244980958435e782ce05bac781cccd0dd8e81b

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Redis::CappedCollection module
 
+    FIXES:
+    - Makefile.PL corrected.
+    - Tests corrected.
+
 1.06  Thu Apr  28 2016
     CHANGES:
     - Ability to force re-connection with Redis on error ('reconnect_on_error' attribute).
