--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 Revision history for Redis::CappedCollection module
 
+1.07  Tue May  03 2016
     FIXES:
     - Makefile.PL corrected.
     - Tests corrected.
