--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Redis::CappedCollection module
 
+    FIXES:
+    - Tests corrected.
+
 1.07  Tue May  03 2016
     FIXES:
     - Makefile.PL corrected.
