--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Redis::CappedCollection module
 
+    CHANGES:
+    - Needs Redis server version 2.8 or higher.
+    - Attempt to protect against used_memory > maxmemory.
     FIXES:
     - Obey 'connection_timeout', 'operation_timeout' attributes of redis connection hash.
     - Tests refined.
