--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Redis::CappedCollection module
 
     CHANGES:
+    - max_list_items added.
     - Needs Redis server version 2.8 or higher.
     - Attempt to protect against used_memory > maxmemory.
     FIXES:
