--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 Revision history for Redis::CappedCollection module
 
+1.10  Fri Feb  24 2017
     CHANGES:
     - max_list_items added.
     - Needs Redis server version 2.8 or higher.
